--- a/package.json
+++ b/package.json
@@ -11,23 +11,30 @@
         "dev:server": "json-server serve.json -w"
     },
     "dependencies": {
+        "@hookform/resolvers": "^3.3.4",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-radio-group": "^1.1.3",
+        "@vercel/speed-insights": "^1.0.9",
+        "axios": "^1.6.7",
         "phosphor-react": "^1.4.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.50.0",
+        "scheduler": "^0.23.0",
         "styled-components": "^6.1.8",
+        "use-context-selector": "^1.4.1",
         "zod": "^3.22.4"
     },
     "devDependencies": {
+        "@rocketseat/eslint-config": "^2.1.0",
         "@types/react": "^18.2.43",
         "@types/react-dom": "^18.2.17",
         "@types/styled-components": "^5.1.34",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
         "@typescript-eslint/parser": "^6.14.0",
         "@vitejs/plugin-react": "^4.2.1",
-        "eslint": "^8.55.0",
+        "dotenv": "^16.4.1",
+        "eslint": "^8.56.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
         "json-server": "^1.0.0-alpha.23",
